# miri-fellowship-inference-scaling

./: .env.example  .gitignore  requirements.txt
data/: aggregated_reasoning_models.csv  eci_benchmarks.csv  inference_scaling_curves.csv  inference_scaling_eci_scores.csv  inference_scaling_tokens_only.csv  manual_reports_data_raw.csv
data/artificial_analysis/: aa_evaluation_families_combined.csv  aa_evaluations_combined.csv  aa_output_tokens.csv  artificial_analysis_llm_stats.csv
data/benchmark_data/: README.md  arc_agi_2_external.csv  arc_agi_external.csv  chess_puzzles.csv  frontiermath.csv  gpqa_diamond.csv  gso_external.csv  metr_time_horizons_external.csv  simplebench_external.csv  simpleqa_verified.csv  swe_bench_verified.csv  webdev_arena_external.csv
data/eci/: benchmarks_runs-PUBLIC VIEW.csv
data/eci_from_benchmarks/: eci_from_benchmarks.csv
data/log_viewer_summary/: Chess_Puzzles__alibaba_qwen3-235b-a22b-thinking-2507.json  Chess_Puzzles__alibaba_qwen3-max-2025-09-23.json  Chess_Puzzles__anthropic_claude-opus-4-5-20251101.json  Chess_Puzzles__anthropic_claude-opus-4-6.json  Chess_Puzzles__anthropic_claude-opus-4-6__2.json  Chess_Puzzles__anthropic_claude-opus-4-6__3.json  Chess_Puzzles__anthropic_claude-sonnet-4-5-20250929.json  Chess_Puzzles__anthropic_claude-sonnet-4-6.json  Chess_Puzzles__zhipu_glm-4.7.json  (+526 more)
eci-public/: .gitignore  LICENSE  README.md  cache_eci_benchmarks.csv  pyproject.toml
eci-public/.github/workflows/: sync-to-public.yml
eci-public/scripts/: fit_baskets.py  fit_eci.py
eci-public/tests/: test_dataloader.py  test_fitting.py
(+1280 files in other folders)
