[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eci"
version = "0.1.0"
description = "ECI (Epoch Capability Index) fitting for LLM benchmark evaluation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Epoch AI", email = "info@epoch.ai" }
]
keywords = ["llm", "benchmarks", "evaluation", "irt", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://epoch.ai"
Repository = "https://github.com/epoch-research/eci-public"
Documentation = "https://github.com/epoch-research/eci-public#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/eci"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
